WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286471
[scroll-animations] setting the effect of a scroll-driven animation fails to recompute effect timing
https://bugs.webkit.org/show_bug.cgi?id=286471
Summary
[scroll-animations] setting the effect of a scroll-driven animation fails to ...
Antoine Quint
Reported
2025-01-24 05:51:03 PST
Setting the `effect` of an `Animation` object fails to recompute the timing properties of the newly-assigned effects leading to failed assertions and inconsistent states for accelerated animations.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2025-01-24 05:58:00 PST
rdar://143521617
Antoine Quint
Comment 2
2025-01-24 05:58:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39496
Antoine Quint
Comment 3
2025-01-24 06:01:03 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/50269
EWS
Comment 4
2025-01-24 08:12:33 PST
Committed
289348@main
(d80503b4c350): <
https://commits.webkit.org/289348@main
> Reviewed commits have been landed. Closing PR #39496 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug